demo/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-backend-deployment
  labels:
    app: demo-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo
      role: backend
  template:
    metadata:
      labels:
        app: demo
        role: backend
    spec:
      containers:
        - name: demo-backend
          image: strm/helloworld-http:latest
          ports:
            - containerPort: 80
