demo/ingress-controller-stable.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tailscale-ingress-controller
  namespace: default
  labels:
    app: ingress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-controller
  template:
    metadata:
      labels:
        app: ingress-controller
    spec:
      serviceAccountName: tailscale-ingress-controller
      containers:
        - name: tailscale-ingress-controller
          image: valentinalexeev/tailscale-ingress-controller:stable
          resources:
            requests:
              cpu: "0.1"
              memory: "64Mi"
            limits:
              cpu: "0.1"
              memory: "128Mi"
