demo/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo-backend
  labels:
    app: demo-backend
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 80
  selector:
    app: demo
    role: backend
